--- a/notes-backend/compose.yml
+++ b/notes-backend/compose.yml
@@ -3,7 +3,8 @@ services:
   notes:
     build:
       context: .
-      dockerfile: dockerfile.dev
+      dockerfile: dockerfile
+      target: development
     ports:
       - "3001:80"
     environment:
